--- a/FlightMe/Base.lproj/Main.storyboard
+++ b/FlightMe/Base.lproj/Main.storyboard
@@ -9,35 +9,103 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FlightMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="bej-iG-PIc"/>
+                        <viewControllerLayoutGuide type="bottom" id="dXt-wT-A8W"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main" translatesAutoresizingMaskIntoConstraints="NO" id="46Z-ql-bhV">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="736" id="CDA-xu-H2F"/>
+                                    <constraint firstAttribute="width" constant="414" id="xOg-zF-MBy"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="88y-nf-XAX">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <connections>
+                                    <action selector="ClickTest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4aQ-1J-ISl"/>
+                                    <segue destination="xkS-v3-oNV" kind="presentation" modalPresentationStyle="fullScreen" id="NIw-zy-hFP"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mainLogo" translatesAutoresizingMaskIntoConstraints="NO" id="nF0-FC-izv">
+                                <rect key="frame" x="135" y="190" width="130" height="177"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="flightText" translatesAutoresizingMaskIntoConstraints="NO" id="flN-an-8se">
+                                <rect key="frame" x="109" y="375" width="187" height="37"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="textMain2" translatesAutoresizingMaskIntoConstraints="NO" id="5dH-XP-HCd">
+                                <rect key="frame" x="150" y="420" width="216" height="23"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dXt-wT-A8W" firstAttribute="top" secondItem="46Z-ql-bhV" secondAttribute="bottom" id="2Hr-Ta-wCz"/>
+                            <constraint firstItem="46Z-ql-bhV" firstAttribute="top" secondItem="bej-iG-PIc" secondAttribute="bottom" id="Hmx-js-e4v"/>
+                            <constraint firstAttribute="trailing" secondItem="46Z-ql-bhV" secondAttribute="trailing" id="Y5J-Ca-4Tz"/>
+                            <constraint firstItem="46Z-ql-bhV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uKN-bo-nTO"/>
+                        </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="337" y="369"/>
         </scene>
         <!--MenuController-->
         <scene sceneID="FT2-57-Qxr">
             <objects>
-                <viewController title="MenuController" id="xkS-v3-oNV" customClass="MenuOnController" customModule="FlightMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="MenuController" wantsFullScreenLayout="YES" id="xkS-v3-oNV" customClass="MenuOnController" customModule="FlightMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="K51-Qg-QCf"/>
-                        <viewControllerLayoutGuide type="bottom" id="sfm-BS-uSa"/>
+                        <viewControllerLayoutGuide type="top" id="dg9-gg-kgV"/>
+                        <viewControllerLayoutGuide type="bottom" id="iq1-3o-tF9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Yc7-CY-0qS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="menuBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Mo7-Sw-Ajl">
+                                <rect key="frame" x="-4" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7zp-fK-ope">
+                                <rect key="frame" x="107" y="68" width="107" height="34"/>
+                                <state key="normal" title="Gatwick"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YhB-01-bxd">
+                                <rect key="frame" x="107" y="172" width="105" height="36"/>
+                                <state key="normal" title="Stanstead"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anl-Ro-EC4">
+                                <rect key="frame" x="107" y="280" width="107" height="36"/>
+                                <state key="normal" title="Heathrow"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AaP-O9-dmr">
+                                <rect key="frame" x="107" y="397" width="107" height="36"/>
+                                <state key="normal" title="Luton"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="dKm-y0-kS4"/>
+                    <connections>
+                        <outlet property="backGroundMenu" destination="Mo7-Sw-Ajl" id="abd-XJ-dBK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sNA-9h-YpN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1154" y="371"/>
+            <point key="canvasLocation" x="1153.125" y="536.61971830985908"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="flightText" width="331" height="65"/>
+        <image name="main" width="564" height="1063"/>
+        <image name="mainLogo" width="204" height="270"/>
+        <image name="menuBackground" width="564" height="1001"/>
+        <image name="textMain2" width="322" height="32"/>
+    </resources>
 </document>
