--- a/FlightMe/Base.lproj/Main.storyboard
+++ b/FlightMe/Base.lproj/Main.storyboard
@@ -105,6 +105,9 @@
                                 <rect key="frame" x="16" y="183" width="163" height="151"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="luton"/>
+                                <connections>
+                                    <segue destination="7di-Ur-71f" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="XV1-tz-W7g"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S0o-Df-Yu6" userLabel="heathrowButton">
                                 <rect key="frame" x="198" y="183" width="161" height="151"/>
@@ -206,10 +209,10 @@
             </objects>
             <point key="canvasLocation" x="413.5" y="1449.5"/>
         </scene>
-        <!--View Controller-->
+        <!--LutonController-->
         <scene sceneID="80g-aL-Srm">
             <objects>
-                <viewController id="7di-Ur-71f" sceneMemberID="viewController">
+                <viewController title="LutonController" id="7di-Ur-71f" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c4Y-cI-O1q"/>
                         <viewControllerLayoutGuide type="bottom" id="g8e-P4-bfc"/>
@@ -217,12 +220,32 @@
                     <view key="view" contentMode="scaleToFill" id="BsU-bQ-lBH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="m5U-4Q-hx5">
+                                <rect key="frame" x="0.0" y="125" width="375" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                            <searchBar contentMode="redraw" fixedFrame="YES" text="Search" translatesAutoresizingMaskIntoConstraints="NO" id="TIV-6b-c8z">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
+                            </searchBar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="MxX-g5-Btp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dIZ-hq-prI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1320" y="482"/>
+            <point key="canvasLocation" x="1407.5" y="411.5"/>
         </scene>
         <!--Gatwick-->
         <scene sceneID="Bxg-Wq-WpI">
