--- a/FlightMe/Base.lproj/Main.storyboard
+++ b/FlightMe/Base.lproj/Main.storyboard
@@ -93,10 +93,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuFBackground" translatesAutoresizingMaskIntoConstraints="NO" id="BTt-S1-rGx">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="airports" translatesAutoresizingMaskIntoConstraints="NO" id="jhi-ym-TBI">
-                                <rect key="frame" x="126.5" y="73" width="132.5" height="31"/>
+                                <rect key="frame" x="126.5" y="93" width="132.5" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="jhi-ym-TBI" secondAttribute="height" multiplier="17:4" id="MfI-Oc-E0x"/>
                                 </constraints>
@@ -154,25 +154,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sNA-9h-YpN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="611" y="481"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="4EM-Md-tOL">
-            <objects>
-                <viewController id="grP-e4-zP6" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="9PG-ii-VI2"/>
-                        <viewControllerLayoutGuide type="bottom" id="Ipn-WW-luI"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="g4g-Ex-1Hq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="jDY-Zg-dNz" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1005" y="-401"/>
+            <point key="canvasLocation" x="511" y="481"/>
         </scene>
         <!--About-->
         <scene sceneID="xaJ-1R-c4I">
@@ -212,7 +194,7 @@
         <!--LutonController-->
         <scene sceneID="80g-aL-Srm">
             <objects>
-                <viewController title="LutonController" id="7di-Ur-71f" sceneMemberID="viewController">
+                <viewController title="LutonController" id="7di-Ur-71f" customClass="lutonController" customModule="FlightMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c4Y-cI-O1q"/>
                         <viewControllerLayoutGuide type="bottom" id="g8e-P4-bfc"/>
@@ -221,61 +203,73 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="m5U-4Q-hx5">
-                                <rect key="frame" x="0.0" y="125" width="375" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="First"/>
-                                    <segment title="Second"/>
-                                </segments>
-                            </segmentedControl>
-                            <searchBar contentMode="redraw" fixedFrame="YES" text="Search" translatesAutoresizingMaskIntoConstraints="NO" id="TIV-6b-c8z">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundLuton" translatesAutoresizingMaskIntoConstraints="NO" id="qhG-bK-rNH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search" translucent="NO" backgroundImage="lutonBackground" scopeBarBackgroundImage="seachBar" translatesAutoresizingMaskIntoConstraints="NO" id="OMb-Mg-f7s">
+                                <rect key="frame" x="9" y="8" width="356" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.17252859473228455" green="0.17256379127502441" blue="0.17252108454704285" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.17252859473228455" green="0.17256379127502441" blue="0.17252108454704285" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" red="0.17252859473228455" green="0.17256379127502441" blue="0.17252108454704285" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <scopeButtonTitles>
-                                    <string>Title</string>
-                                    <string>Title</string>
-                                </scopeButtonTitles>
                             </searchBar>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Siu-Px-uUf">
+                                <rect key="frame" x="9" y="58" width="356" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Arrivals"/>
+                                    <segment title="Departures"/>
+                                </segments>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </segmentedControl>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="AgL-0Q-Z0s">
+                                <rect key="frame" x="0.0" y="619" width="375" height="48"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="buttomImage" translatesAutoresizingMaskIntoConstraints="NO" id="EJ3-c1-hTO">
+                                <rect key="frame" x="161" y="592" width="52" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nc4-Mf-8YH">
+                                <rect key="frame" x="26" y="632" width="22" height="17"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="menuIcon"/>
+                                <connections>
+                                    <segue destination="xkS-v3-oNV" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="60U-eJ-wzV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="qhG-bK-rNH" secondAttribute="trailing" id="03l-vy-c0z"/>
+                            <constraint firstItem="qhG-bK-rNH" firstAttribute="top" secondItem="c4Y-cI-O1q" secondAttribute="bottom" constant="-20" id="0lp-cD-Hfn"/>
+                            <constraint firstItem="qhG-bK-rNH" firstAttribute="leading" secondItem="BsU-bQ-lBH" secondAttribute="leading" id="7Cs-u5-n1H"/>
+                            <constraint firstItem="g8e-P4-bfc" firstAttribute="top" secondItem="qhG-bK-rNH" secondAttribute="bottom" id="JVw-jF-v85"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MxX-g5-Btp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dIZ-hq-prI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1407.5" y="411.5"/>
-        </scene>
-        <!--Gatwick-->
-        <scene sceneID="Bxg-Wq-WpI">
-            <objects>
-                <viewController title="Gatwick" id="3va-NL-QUt" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ye9-Xg-1tg"/>
-                        <viewControllerLayoutGuide type="bottom" id="xks-m4-1uH"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="57z-dU-jam">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="0vv-ub-ZSY"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lIm-Ns-ygY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="167" y="-324"/>
+            <point key="canvasLocation" x="1117.5" y="-154.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="airports" width="208" height="51"/>
+        <image name="backgroundLuton" width="564" height="1001"/>
+        <image name="bottom" width="564" height="89"/>
+        <image name="buttomImage" width="80" height="79"/>
         <image name="flightText" width="331" height="65"/>
         <image name="gatwick" width="243" height="225"/>
         <image name="heathrow" width="243" height="225"/>
         <image name="luton" width="243" height="225"/>
+        <image name="lutonBackground" width="564" height="1001"/>
         <image name="mainLogo" width="204" height="270"/>
         <image name="menuFBackground" width="564" height="1001"/>
+        <image name="menuIcon" width="34" height="30"/>
         <image name="plusButton" width="26" height="27"/>
+        <image name="seachBar" width="511" height="50"/>
         <image name="stanstead" width="243" height="225"/>
         <image name="textMain2" width="322" height="32"/>
     </resources>
@@ -284,4 +278,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="60U-eJ-wzV"/>
+    </inferredMetricsTieBreakers>
 </document>
