--- a/FlightMe/Base.lproj/Main.storyboard
+++ b/FlightMe/Base.lproj/Main.storyboard
@@ -105,9 +105,6 @@
                                 <rect key="frame" x="16" y="183" width="163" height="151"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="luton"/>
-                                <connections>
-                                    <segue destination="7di-Ur-71f" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="XV1-tz-W7g"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S0o-Df-Yu6" userLabel="heathrowButton">
                                 <rect key="frame" x="198" y="183" width="161" height="151"/>
@@ -123,6 +120,9 @@
                                 <rect key="frame" x="198" y="353" width="163" height="151"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="gatwick"/>
+                                <connections>
+                                    <segue destination="7di-Ur-71f" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="yzu-hf-DUE"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGh-vs-NHo" userLabel="plusButton">
                                 <rect key="frame" x="343" y="636" width="20" height="18"/>
@@ -191,10 +191,10 @@
             </objects>
             <point key="canvasLocation" x="413.5" y="1449.5"/>
         </scene>
-        <!--LutonController-->
+        <!--GatwickController-->
         <scene sceneID="80g-aL-Srm">
             <objects>
-                <viewController title="LutonController" id="7di-Ur-71f" customClass="lutonController" customModule="FlightMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="GatwickController" id="7di-Ur-71f" customClass="GatwickContro" customModule="FlightMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="c4Y-cI-O1q"/>
                         <viewControllerLayoutGuide type="bottom" id="g8e-P4-bfc"/>
@@ -203,19 +203,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundLuton" translatesAutoresizingMaskIntoConstraints="NO" id="qhG-bK-rNH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testBackground112" translatesAutoresizingMaskIntoConstraints="NO" id="qhG-bK-rNH">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search" translucent="NO" backgroundImage="lutonBackground" scopeBarBackgroundImage="seachBar" translatesAutoresizingMaskIntoConstraints="NO" id="OMb-Mg-f7s">
-                                <rect key="frame" x="9" y="8" width="356" height="44"/>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search" translucent="NO" backgroundImage="testBackground112" scopeBarBackgroundImage="seachBar" translatesAutoresizingMaskIntoConstraints="NO" id="OMb-Mg-f7s">
+                                <rect key="frame" x="9" y="35" width="356" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.17252859473228455" green="0.17256379127502441" blue="0.17252108454704285" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="tintColor" red="0.17252859473228455" green="0.17256379127502441" blue="0.17252108454704285" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="barTintColor" red="0.17252859473228455" green="0.17256379127502441" blue="0.17252108454704285" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.00174028764013201" green="0.35331165790557861" blue="0.93444466590881348" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.00174028764013201" green="0.35331165790557861" blue="0.93444466590881348" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" red="0.00174028764013201" green="0.35331165790557861" blue="0.93444466590881348" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Siu-Px-uUf">
-                                <rect key="frame" x="9" y="58" width="356" height="29"/>
+                                <rect key="frame" x="9" y="82" width="356" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="Arrivals"/>
@@ -223,22 +223,73 @@
                                 </segments>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </segmentedControl>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="AgL-0Q-Z0s">
-                                <rect key="frame" x="0.0" y="619" width="375" height="48"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="buttomImage" translatesAutoresizingMaskIntoConstraints="NO" id="EJ3-c1-hTO">
-                                <rect key="frame" x="161" y="592" width="52" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nc4-Mf-8YH">
-                                <rect key="frame" x="26" y="632" width="22" height="17"/>
+                                <rect key="frame" x="346" y="10" width="22" height="18"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="menuIcon"/>
+                                <state key="normal" image="menuWhite"/>
                                 <connections>
                                     <segue destination="xkS-v3-oNV" kind="modal" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="60U-eJ-wzV"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="103" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ieo-cI-RVM">
+                                <rect key="frame" x="9" y="126" width="356" height="521"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="103" id="rs2-bR-gNi" customClass="TableViewCell" customModule="FlightMe" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="356" height="103"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rs2-bR-gNi" id="HSg-5u-DYG">
+                                            <rect key="frame" x="0.0" y="0.0" width="356" height="103"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7v-7s-QGj">
+                                                    <rect key="frame" x="128" y="29" width="100" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Destination" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asX-p5-3UY">
+                                                    <rect key="frame" x="243" y="29" width="107" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ECQ-cl-Gnz">
+                                                    <rect key="frame" x="157" y="74" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Terminal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hQ-fb-VaQ">
+                                                    <rect key="frame" x="8" y="73" width="75" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Carrier" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5dw-ZG-VNT">
+                                                    <rect key="frame" x="8" y="28" width="107" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="company" destination="5dw-ZG-VNT" id="TrE-cZ-gv4"/>
+                                            <outlet property="destination" destination="asX-p5-3UY" id="Gyl-mg-9xx"/>
+                                            <outlet property="location" destination="R7v-7s-QGj" id="fxr-yI-MR4"/>
+                                            <outlet property="terminal" destination="0hQ-fb-VaQ" id="bgy-ey-4QY"/>
+                                            <outlet property="time" destination="ECQ-cl-Gnz" id="ZPx-az-dlk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -249,28 +300,28 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MxX-g5-Btp"/>
+                    <connections>
+                        <outlet property="tableView" destination="ieo-cI-RVM" id="elH-ky-RME"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dIZ-hq-prI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1117.5" y="-154.5"/>
+            <point key="canvasLocation" x="1179.5" y="-253.5"/>
         </scene>
     </scenes>
     <resources>
         <image name="airports" width="208" height="51"/>
-        <image name="backgroundLuton" width="564" height="1001"/>
-        <image name="bottom" width="564" height="89"/>
-        <image name="buttomImage" width="80" height="79"/>
         <image name="flightText" width="331" height="65"/>
         <image name="gatwick" width="243" height="225"/>
         <image name="heathrow" width="243" height="225"/>
         <image name="luton" width="243" height="225"/>
-        <image name="lutonBackground" width="564" height="1001"/>
         <image name="mainLogo" width="204" height="270"/>
         <image name="menuFBackground" width="564" height="1001"/>
-        <image name="menuIcon" width="34" height="30"/>
+        <image name="menuWhite" width="48" height="35"/>
         <image name="plusButton" width="26" height="27"/>
         <image name="seachBar" width="511" height="50"/>
         <image name="stanstead" width="243" height="225"/>
+        <image name="testBackground112" width="564" height="1001"/>
         <image name="textMain2" width="322" height="32"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
